# sbp

./: LICENSE  README.md
covariant/: .gitignore  CMakeLists.txt  Makefile  README.md  add_results.sh  citation.bib  run_timing.sh  run_timing_stencil.sh  run_vtk.sh  sbp_operators.m  simulation.jl  stencil.jl  test_operators.m
covariant/plot/: efficiency_plot.py  helper.py
covariant/resources/build3/: D42.json  D42.mat  Dhat42.json  Dhat42.mat  H42.json  H42.mat  Hhat42.json  Hhat42.mat  Hi42.json  Hihat42.json  P42.json  P42.mat  Phat42.json  Phat42.mat  Q42.json  Qhat42.json
covariant/resources/build7/: D42.json  D42.mat  Dhat42.json  Dhat42.mat  H42.json  H42.mat  Hhat42.json  Hhat42.mat  Hi42.json  Hihat42.json  P42.json  P42.mat  Phat42.json  Phat42.mat  Q42.json  Qhat42.json
covariant/src/: CMakeLists.txt  collocated.cu  collocated_solver.cu  helper.hpp  solver.cu  staggered.cu  staggered_solver.cu  stencil_solver.cu
non-stiff/problem-3-conservation-vs-dissipation/: CMakeLists.txt  Makefile  README.md  efficiency.py  efficiency.sh  error_in_time.py  helper.py  parameters.py  test.py
non-stiff/problem-3-conservation-vs-dissipation/include/: sbpcxx.hpp
non-stiff/problem-3-conservation-vs-dissipation/include/function/: approx.hpp  argnearest.hpp  bounds.hpp  cmp_bounds_size.hpp  constant.hpp  copy_initializer_list.hpp  cuda_err_check.hpp  d21.hpp  diff.hpp  dm42.hpp  dp42.hpp  dtod.hpp  dtoh.hpp  dump.hpp  expr.hpp  fill.hpp  free.hpp  gather.hpp  getdim.hpp  grid_points.hpp  gridm.hpp  gridp.hpp  hm4.hpp  host_err_check.hpp  hp4.hpp  htod.hpp  inner.hpp  lagrange.hpp  leapfrog.hpp  lineop.hpp  lsrk4.hpp  malloc.hpp  memset.hpp  memzero.hpp  mpi_err_check.hpp  mpi_irecv.hpp  (+17 more)
non-stiff/problem-3-conservation-vs-dissipation/logs/: debug_lf2_0.txt  debug_lf2_1.txt  debug_lf2_2.txt  debug_lf2_3.txt  debug_lf2_4.txt  debug_lf2_5.txt  debug_lf_0.txt  debug_lf_1.txt  debug_lf_2.txt  debug_lf_3.txt  debug_lf_4.txt  debug_lf_5.txt  debug_lf_6.txt  lf_0.txt  lf_1.txt  lf_2.txt  lf_3.txt  lf_4.txt  lf_5.txt  lf_6.txt  p2_rk4_0.txt  p2_rk4_1.txt  p2_rk4_2.txt  p2_rk4_3.txt  p2_srk4_0.txt  p2_srk4_1.txt  p2_srk4_2.txt  rk4.txt  rk4_0.txt  rk4_1.txt  rk4_2.txt  rk4_3.txt  rk4_4.txt  rk4_5.txt  rk4_6.txt  rk4_ed_0.txt  rk4_ed_1.txt  rk4_ed_2.txt  rk4_ed_3.txt  rk4_ed_4.txt  (+42 more)
non-stiff/problem-3-conservation-vs-dissipation/src/: acoustic.cu  acoustic.hpp
(+72 files in other folders)
